organized website file structure

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="../style.css">
-<link rel="stylesheet" type="text/css" href="contact.css">
+<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+<link rel="stylesheet" type="text/css" href="resources/css/contact.css">
 
 </head>
 <body>
@@ -20,16 +20,16 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<!--Name of Website (clickable)-->
-	<a href="../index.html" style="text-decoration: none;">
+	<a href="index.html" style="text-decoration: none;">
 		<h1 class="webname">Gerry Minor's Fine Art</h1>
 	</a>
 	<li class="menu">
 		<!--Hamburger menu icon appears when screen gets smaller-->
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
 	</li>
-	<li><a href="../index.html">Home</a></li>
-	<li><a href="../galleryPage/gallery.html">Gallery</a></li>
-	<li><a href="../aboutPage/about.html">About</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="gallery.html">Gallery</a></li>
+	<li><a href="about.html">About</a></li>
 	<li><a class="active" href="#">Contact</a></li>
 </ul>
 
@@ -41,7 +41,7 @@
 	<button class="fa fa-paper-plane" id="send" title="Send" onclick="send()"></button>
 </div>
 
-<script type="text/javascript" src="../menu.js"></script>
-<script type="text/javascript" src="contact.js"></script>
+<script type="text/javascript" src="resources/js/menu.js"></script>
+<script type="text/javascript" src="resources/js/contact.js"></script>
 </body>
 </html>
