--- a/gallery.html
+++ b/gallery.html
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.comjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="gallery.css">
-<link rel="stylesheet" type="text/css" href="../style.css">
+<link rel="stylesheet" type="text/css" href="resources/css/gallery.css">
+<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="gallery.js"></script>
+<script type="text/javascript" src="resources/js/gallery.js"></script>
 
 </head>
 <body>
@@ -35,17 +35,17 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<!--Name of Website (clickable)-->
-	<a href="../index.html" style="text-decoration: none;">
+	<a href="index.html" style="text-decoration: none;">
 		<h1 class="webname">Gerry Minor's Fine Art</h1>
 	</a>
 	<li class="menu">
 		<!--Hamburger menu icon appears when screen gets smaller-->
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
 	</li>
-	<li><a href="../index.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a class="active" href="#">Gallery</a></li>
-	<li><a href="../aboutPage/about.html">About</a></li>
-	<li><a href="../contactPage/contact.html">Contact</a></li>
+	<li><a href="about.html">About</a></li>
+	<li><a href="contact.html">Contact</a></li>
 </ul>
 
 <!--Filter-->
@@ -72,8 +72,8 @@
 				<div class="title">
 					<p>Kitty in Trouble</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/kittyInTrouble.jpg')">
-					<img src="thumbnails/kittyInTrouble_t.jpg" alt="Kitty in Trouble" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/kittyInTrouble.jpg')">
+					<img src="resources/thumbnails/kittyInTrouble_t.jpg" alt="Kitty in Trouble" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -88,8 +88,8 @@
 				<div class="title">
 					<p>Romeo and Juliet</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/romeoAndJuliet.jpg')">
-					<img src="thumbnails/romeoAndJuliet_t.jpg" alt="Romeo and Juliet" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/romeoAndJuliet.jpg')">
+					<img src="resources/thumbnails/romeoAndJuliet_t.jpg" alt="Romeo and Juliet" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -104,8 +104,8 @@
 				<div class="title">
 					<p>A Good Lesson</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/aGoodLesson.jpg')">
-					<img src="thumbnails/aGoodLesson_t.jpg" alt="A Good Lesson" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/aGoodLesson.jpg')">
+					<img src="resources/thumbnails/aGoodLesson_t.jpg" alt="A Good Lesson" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Pencil</p>
@@ -120,8 +120,8 @@
 				<div class="title">
 					<p>Constitution</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/constitution.jpg')">
-					<img src="thumbnails/constitution_t.jpg" alt="Constitution" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/constitution.jpg')">
+					<img src="resources/thumbnails/constitution_t.jpg" alt="Constitution" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -136,8 +136,8 @@
 				<div class="title">
 					<p>Happy Feet</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/happyFeet.jpg')">
-					<img src="thumbnails/happyFeet_t.jpg" alt="Happy Feet" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/happyFeet.jpg')">
+					<img src="resources/thumbnails/happyFeet_t.jpg" alt="Happy Feet" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -152,8 +152,8 @@
 				<div class="title">
 					<p>Meet My Main Squeeze</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/meetMyMainSqueeze.jpg')">
-					<img src="thumbnails/meetMyMainSqueeze_t.jpg" alt="Meet My Main Squeeze" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/meetMyMainSqueeze.jpg')">
+					<img src="resources/thumbnails/meetMyMainSqueeze_t.jpg" alt="Meet My Main Squeeze" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -168,8 +168,8 @@
 				<div class="title">
 					<p>Myrick & Estelle House</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/myrickEstelleHouse.jpg')">
-					<img src="thumbnails/myrickEstelleHouse_t.jpg" alt="Myrick and Estelle House" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/myrickEstelleHouse.jpg')">
+					<img src="resources/thumbnails/myrickEstelleHouse_t.jpg" alt="Myrick and Estelle House" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Pen & Ink</p>
@@ -184,8 +184,8 @@
 				<div class="title">
 					<p>Keen Home</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/keenHome.jpg')">
-					<img src="thumbnails/keenHome_t.jpg" alt="Keen Home" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/keenHome.jpg')">
+					<img src="resources/thumbnails/keenHome_t.jpg" alt="Keen Home" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Pen & Ink</p>
@@ -200,8 +200,8 @@
 				<div class="title">
 					<p>Cassem Home</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/cassemHome.jpg')">
-					<img src="thumbnails/cassemHome_t.jpg" alt="Cassem Home" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/cassemHome.jpg')">
+					<img src="resources/thumbnails/cassemHome_t.jpg" alt="Cassem Home" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Pen & Ink</p>
@@ -216,8 +216,8 @@
 				<div class="title">
 					<p>Oregon Lake</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/oregonLake.jpg')">
-					<img src="thumbnails/oregonLake_t.jpg" alt="Oregon Lake" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/oregonLake.jpg')">
+					<img src="resources/thumbnails/oregonLake_t.jpg" alt="Oregon Lake" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -232,8 +232,8 @@
 				<div class="title">
 					<p>Justin</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/justin.jpg')">
-					<img src="thumbnails/justin_t.jpg" alt="Justin" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/justin.jpg')">
+					<img src="resources/thumbnails/justin_t.jpg" alt="Justin" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -248,8 +248,8 @@
 				<div class="title">
 					<p>Tyler Reed</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/tylerReed.jpg')">
-					<img src="thumbnails/tylerReed_t.jpg" alt="Tyler Reed" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/tylerReed.jpg')">
+					<img src="resources/thumbnails/tylerReed_t.jpg" alt="Tyler Reed" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -264,8 +264,8 @@
 				<div class="title">
 					<p>Comforting</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/comforting.jpg')">
-					<img src="thumbnails/comforting_t.jpg" alt="Comforting" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/comforting.jpg')">
+					<img src="resources/thumbnails/comforting_t.jpg" alt="Comforting" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -280,8 +280,8 @@
 				<div class="title">
 					<p>Girl in Flower Garden</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('pictures/girlInFlowerGarden.jpg')">
-					<img src="thumbnails/girlInFlowerGarden_t.jpg" alt="Girl in Flower Garden" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/girlInFlowerGarden.jpg')">
+					<img src="resources/thumbnails/girlInFlowerGarden_t.jpg" alt="Girl in Flower Garden" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -294,6 +294,6 @@
 </div>
 
 </div>
-<script type="text/javascript" src="../menu.js"></script>
+<script type="text/javascript" src="resources/js/menu.js"></script>
 </body>
 </html>
