--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="../style.css">
-<link rel="stylesheet" type="text/css" href="about.css">
+<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+<link rel="stylesheet" type="text/css" href="resources/css/about.css">
 
 </head>
 <body>
@@ -20,17 +20,17 @@
 <!--Navigation Bar-->
 <ul class="topnav" id="topNav">
 	<!--Name of Website (clickable)-->
-	<a href="../index.html" style="text-decoration: none;">
+	<a href="index.html" style="text-decoration: none;">
 		<h1 class="webname">Gerry Minor's Fine Art</h1>
 	</a>
 	<li class="menu">
 		<!--Hamburger menu icon appears when screen gets smaller-->
 		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
 	</li>
-	<li><a href="../index.html">Home</a></li>
-	<li><a href="../galleryPage/gallery.html">Gallery</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="gallery.html">Gallery</a></li>
 	<li><a class="active" href="#">About</a></li>
-	<li><a href="../contactPage/contact.html">Contact</a></li>
+	<li><a href="contact.html">Contact</a></li>
 </ul>
 
 <div class="panel">
@@ -49,6 +49,6 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="../menu.js"></script>
+<script type="text/javascript" src="resources/js/menu.js"></script>
 </body>
 </html>
