--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="homePage/home.css">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="resources/css/home.css">
+<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 
 </head>
 <body>
@@ -28,9 +28,9 @@
 		<a id="menuButton" href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
 	</li>
 	<li><a class="active" href="#">Home</a></li>
-	<li><a href="galleryPage/gallery.html">Gallery</a></li>
-	<li><a href="aboutPage/about.html">About</a></li>
-	<li><a href="contactPage/contact.html">Contact</a></li>
+	<li><a href="gallery.html">Gallery</a></li>
+	<li><a href="about.html">About</a></li>
+	<li><a href="contact.html">Contact</a></li>
 </ul>
 
 <!--Slideshow-->
@@ -42,7 +42,7 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="homePage/home.js"></script>
-<script type="text/javascript" src="menu.js"></script>
+<script type="text/javascript" src="resources/js/home.js"></script>
+<script type="text/javascript" src="resources/js/menu.js"></script>
 </body>
 </html>
