--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,26 @@
 <head>
 
 <title>Gallery</title>
+<link rel="shortcut icon" href="resources/favicons/favicon.ico">
+<link rel="icon" sizes="16x16 32x32 64x64" href="resources/favicons/favicon.ico">
+<link rel="icon" type="image/png" sizes="196x196" href="resources/favicons/favicon-192.png">
+<link rel="icon" type="image/png" sizes="160x160" href="resources/favicons/favicon-160.png">
+<link rel="icon" type="image/png" sizes="96x96" href="resources/favicons/favicon-96.png">
+<link rel="icon" type="image/png" sizes="64x64" href="resources/favicons/favicon-64.png">
+<link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="resources/favicons/favicon-16.png">
+<link rel="apple-touch-icon" href="resources/favicons/favicon-57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="resources/favicons/favicon-114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="resources/favicons/favicon-72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="resources/favicons/favicon-144.png">
+<link rel="apple-touch-icon" sizes="60x60" href="resources/favicons/favicon-60.png">
+<link rel="apple-touch-icon" sizes="120x120" href="resources/favicons/favicon-120.png">
+<link rel="apple-touch-icon" sizes="76x76" href="resources/favicons/favicon-76.png">
+<link rel="apple-touch-icon" sizes="152x152" href="resources/favicons/favicon-152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/favicon-180.png">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="msapplication-TileImage" content="resources/favicons/favicon-144.png">
+<meta name="msapplication-config" content="resources/favicons/browserconfig.xml">
 
 <!--Makes the website responsive on mobile-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
