added link to aaronbuckles.com

--- a/about.html
+++ b/about.html
@@ -69,6 +69,11 @@
 	</div>
 </div>
 
+<div class="panel">
+	<h3>Aaron Buckles</h3>
+	<p style="text-align: center">Click <a href="http://www.aaronbuckles.com" target="_blank">here</a> to visit the website of Gerry Minor's Fine Art creator.</p>
+</div>
+
 <script type="text/javascript" src="resources/js/menu.js"></script>
 </body>
 </html>
