added cat newberry painting

--- a/gallery.html
+++ b/gallery.html
@@ -241,7 +241,7 @@
 				</a>
 				<div class="description">
 					<p>Oil</p>
-					<p>30" &times; 40"</p>
+					<p>Unknown size</p>
 				</div>
 			</div>
 		</div>
@@ -257,7 +257,7 @@
 				</a>
 				<div class="description">
 					<p>Oil</p>
-					<p>30" &times; 40"</p>
+					<p>Unknown size</p>
 				</div>
 			</div>
 		</div>
@@ -273,7 +273,7 @@
 				</a>
 				<div class="description">
 					<p>Oil</p>
-					<p>30" &times; 40"</p>
+					<p>16" &times; 20"</p>
 				</div>
 			</div>
 		</div>
@@ -289,7 +289,7 @@
 				</a>
 				<div class="description">
 					<p>Oil</p>
-					<p>30" &times; 40"</p>
+					<p>20" &times; 30"</p>
 				</div>
 			</div>
 		</div>
@@ -305,7 +305,23 @@
 				</a>
 				<div class="description">
 					<p>Oil</p>
-					<p>30" &times; 40"</p>
+					<p>Unknown size</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Cat Newberry</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/catNewberry.jpg')">
+					<img src="resources/thumbnails/catNewberry_t.jpg" alt="Girl in Flower Garden" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>Unknown size</p>
 				</div>
 			</div>
 		</div>
