added three more paintings

--- a/gallery.html
+++ b/gallery.html
@@ -317,11 +317,75 @@
 					<p>Cat Newberry</p>
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/catNewberry.jpg')">
-					<img src="resources/thumbnails/catNewberry_t.jpg" alt="Girl in Flower Garden" width="230" height="230">
+					<img src="resources/thumbnails/catNewberry_t.jpg" alt="Cat Newberry" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
 					<p>Unknown size</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Lambs</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/lambs.jpg')">
+					<img src="resources/thumbnails/lambs_t.jpg" alt="Lambs" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>20" &times; 16"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Tiger</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/tiger.jpg')">
+					<img src="resources/thumbnails/tiger_t.jpg" alt="Tiger" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>24" &times; 36"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Three Snow Leopards</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/threeSnowLeopards.jpg')">
+					<img src="resources/thumbnails/threeSnowLeopards_t.jpg" alt="Three Snow Leopards" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>15" &times; 30"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Yellow Rose</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/yellowRose.png')">
+					<img src="resources/thumbnails/yellowRose_t.jpg" alt="Yellow Rose" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>5" &times; 7" (Oval)</p>
 				</div>
 			</div>
 		</div>
