added back to top link

--- a/gallery.html
+++ b/gallery.html
@@ -391,6 +391,14 @@
 		</div>
 	</div>
 	<!--END DRAWINGS-->
+
+	<div class="responsive">
+		<div class="panel">
+			<div class="description">
+				<p>Click <a href="#">here</a> to get back to top</p>
+			</div>
+	    </div>
+	</div>
 </div>
 
 </div>
