Changed wording of my about description

--- a/gallery.html
+++ b/gallery.html
@@ -390,6 +390,22 @@
 			</div>
 		</div>
 	</div>
+	<div class="oil all">
+	    <div class="responsive">
+	        <div class="panel">
+	            <div class="title">
+	                <p>Jim Leisner</p>
+	            </div>
+	            <a title="Click to view" onclick="openViewer('resources/pictures/jimLeisner.jpg')">
+	                <img src="resources/thumbnails/jimLeisner_t.jpg" alt="Jim Leisner" width="230" height="230">
+	            </a>
+	            <div class="description">
+	                <p>Oil</p>
+	                <p>22" &times; 24"</p>
+	            </div>
+	        </div>
+	    </div>
+	</div>
 	<!--END DRAWINGS-->
 
 	<div class="responsive">
@@ -400,7 +416,6 @@
 	    </div>
 	</div>
 </div>
-
 </div>
 <script type="text/javascript" src="resources/js/menu.js"></script>
 </body>
