--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
 <div class="panel">
 	<h3>Aaron Buckles</h3>
-	<p style="text-align: center">Click <a href="http://www.aaronbuckles.com" target="_blank">here</a> to visit the website of Gerry Minor's Fine Art creator.</p>
+	<p style="text-align: center">Click <a href="http://www.aaronbuckles.com" target="_blank">here</a> for info on this website's creator.</p>
 </div>
 
 <script type="text/javascript" src="resources/js/menu.js"></script>
