Added image for jim leisner

--- a/gallery.html
+++ b/gallery.html
@@ -400,7 +400,7 @@
 	                <img src="resources/thumbnails/jimLeisner_t.jpg" alt="Jim Leisner" width="230" height="230">
 	            </a>
 	            <div class="description">
-	                <p>Oil</p>
+	                <p>Oil: degraded photo quality</p>
 	                <p>22" &times; 24"</p>
 	            </div>
 	        </div>
