New pictures and bg

--- a/gallery.html
+++ b/gallery.html
@@ -77,11 +77,11 @@
 			</div>
 			<div class="radios">
 			<label><input type="radio" onclick="getType()" name="type" value="all" checked> All</label><br>
-	    	<label><input type="radio" onclick="getType()" name="type" value="oil"> Oil</label><br>
-	    	<label><input type="radio" onclick="getType()" name="type" value="pencil"> Pencil</label><br>
-	    	<label><input type="radio" onclick="getType()" name="type" value="penInk"> Pen & Ink</label><br>
-	    	<label><input type="radio" onclick="getType()" name="type" value="other"> Other</label><br>
-	    </div>
+			<label><input type="radio" onclick="getType()" name="type" value="oil"> Oil</label><br>
+			<label><input type="radio" onclick="getType()" name="type" value="pencil"> Pencil</label><br>
+			<label><input type="radio" onclick="getType()" name="type" value="penInk"> Pen & Ink</label><br>
+			<label><input type="radio" onclick="getType()" name="type" value="other"> Other</label><br>
+		</div>
 		</div>
 	</div>
 
@@ -391,21 +391,166 @@
 		</div>
 	</div>
 	<div class="oil all">
-	    <div class="responsive">
-	        <div class="panel">
-	            <div class="title">
-	                <p>Jim Leisner</p>
-	            </div>
-	            <a title="Click to view" onclick="openViewer('resources/pictures/jimLeisner.jpg')">
-	                <img src="resources/thumbnails/jimLeisner_t.jpg" alt="Jim Leisner" width="230" height="230">
-	            </a>
-	            <div class="description">
-	                <p>Oil: degraded photo quality</p>
-	                <p>22" &times; 24"</p>
-	            </div>
-	        </div>
-	    </div>
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jim Leisner</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/jimLeisner.jpg')">
+					<img src="resources/thumbnails/jimLeisner_t.jpg" alt="Jim Leisner" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil: degraded photo quality</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div> 
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Robert Tranquada, M.D.</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/robertTranquada.jpg')">
+					<img src="resources/thumbnails/robertTranquada_t.jpg" alt="Robert Tranquada, M.D." width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
 	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Francis McBeth, Ph.D.</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/francisMcbeth.jpg')">
+					<img src="resources/thumbnails/francisMcbeth_t.jpg" alt="Francis McBeth, Ph.D." width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>    
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jack Mossler, M.D.</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/jackMossler.jpg')">
+					<img src="resources/thumbnails/jackMossler_t.jpg" alt="Jack Mossler, M.D." width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>   
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Gustavo Carranza (Younger)</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/gustavoCarranzaYounger.jpg')">
+					<img src="resources/thumbnails/gustavoCarranzaYounger_t.jpg" alt="Gustavo Carranza" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Gustavo Carranza (Older)</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/gustavoCarranzaOlder.jpg')">
+					<img src="resources/thumbnails/gustavoCarranzaOlder_t.jpg" alt="Gustavo Carranza" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Howard Swan, Ph.D.</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/howardSwan,Ph.d..jpg')">
+					<img src="resources/thumbnails/howardSwan,Ph.d._t.jpg" alt="Howard Swan, Ph.D." width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jester Hairston</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/jesterHairston.jpg')">
+					<img src="resources/thumbnails/jesterHairston_t.jpg" alt="Jester Hairston" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jana Jobes</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/janaJobes.jpg')">
+					<img src="resources/thumbnails/janaJobes_t.jpg" alt="Jana Jobes" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>20" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jim Trebilcox</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/jimTrebilcox.jpg')">
+					<img src="resources/thumbnails/jimTrebilcox_t.jpg" alt="Jim Trebilcox" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>22" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	<!--END DRAWINGS-->
 
 	<div class="responsive">
@@ -413,7 +558,7 @@
 			<div class="description">
 				<p>Click <a href="#">here</a> to get back to top</p>
 			</div>
-	    </div>
+		</div>
 	</div>
 </div>
 </div>
